tests/snapshots/frontend_queries__home_page.snap
---
source: tests/frontend_queries.rs
expression: response
---
{
  "data": {
    "featuredPosts": {
      "edges": [
        {
          "node": {
            "id": 1,
            "title": "Tanévnyitó ünnepség",
            "description": "Ünnepélyesen megnyitottuk a 2026/2027-es tanévet.",
            "color": "#1e88e5",
            "date": "2026-09-01",
            "indexImage": "https://storage.test/posts_images/tanevnyito.jpg",
            "author": {
              "name": "Kovács Anna",
              "image": "https://storage.test/authors_images/kovacs-anna.jpg"
            },
            "labels": [
              {
                "id": 2,
                "name": "Ünnepségek",
                "color": "#8e24aa"
              },
              {
                "id": 1,
                "name": "Hírek",
                "color": "#1e88e5"
              }
            ]
          }
        },
        {
          "node": {
            "id": 5,
            "title": "Karácsonyi koncert",
            "description": "Az iskolakórus ünnepi hangversenye.",
            "color": "#e53935",
            "date": "2025-12-19",
            "indexImage": "https://storage.test/posts_images/koncert.jpg",
            "author": null,
            "labels": [
              {
                "id": 2,
                "name": "Ünnepségek",
                "color": "#8e24aa"
              }
            ]
          }
        }
      ]
    },
    "posts": {
      "pageInfo": {
        "endCursor": "2025-12-19#5",
        "hasPreviousPage": false
      },
      "edges": [
        {
          "node": {
            "id": 1,
            "title": "Tanévnyitó ünnepség",
            "description": "Ünnepélyesen megnyitottuk a 2026/2027-es tanévet.",
            "color": "#1e88e5",
            "date": "2026-09-01",
            "indexImage": "https://storage.test/posts_images/tanevnyito.jpg",
            "author": {
              "name": "Kovács Anna",
              "image": "https://storage.test/authors_images/kovacs-anna.jpg"
            },
            "labels": [
              {
                "id": 2,
                "name": "Ünnepségek",
                "color": "#8e24aa"
              },
              {
                "id": 1,
                "name": "Hírek",
                "color": "#1e88e5"
              }
            ]
          }
        },
        {
          "node": {
            "id": 2,
            "title": "Őszi sportnap",
            "description": "Futóverseny és focibajnokság az udvaron.",
            "color": "#43a047",
            "date": "2026-08-20",
            "indexImage": "https://storage.test/posts_images/sportnap.jpg",
            "author": {
              "name": "Nagy Béla",
              "image": null
            },
            "labels": [
              {
                "id": 3,
                "name": "Sport",
                "color": "#43a047"
              }
            ]
          }
        },
        {
          "node": {
            "id": 3,
            "title": "Nyári tábor beszámoló",
            "description": null,
            "color": "#fb8c00",
            "date": "2026-07-10",
            "indexImage": "https://storage.test/posts_images/tabor.jpg",
            "author": {
              "name": "Kovács Anna",
              "image": "https://storage.test/authors_images/kovacs-anna.jpg"
            },
            "labels": []
          }
        },
        {
          "node": {
            "id": 6,
            "title": "Farsangi bál",
            "description": "Utólag rögzített beszámoló.",
            "color": "#fdd835",
            "date": "2026-02-13",
            "indexImage": "https://storage.test/posts_images/farsang.jpg",
            "author": {
              "name": "Nagy Béla",
              "image": null
            },
            "labels": [
              {
                "id": 1,
                "name": "Hírek",
                "color": "#1e88e5"
              }
            ]
          }
        },
        {
          "node": {
            "id": 5,
            "title": "Karácsonyi koncert",
            "description": "Az iskolakórus ünnepi hangversenye.",
            "color": "#e53935",
            "date": "2025-12-19",
            "indexImage": "https://storage.test/posts_images/koncert.jpg",
            "author": null,
            "labels": [
              {
                "id": 2,
                "name": "Ünnepségek",
                "color": "#8e24aa"
              }
            ]
          }
        }
      ]
    }
  },
  "extensions": {
    "analyzer": {
      "complexity": 35,
      "depth": 5
    }
  }
}
