tests/snapshots/frontend_queries__information_page_menu.snap
---
source: tests/frontend_queries.rs
expression: response
---
{
  "data": {
    "menu": [
      {
        "children": [
          {
            "link": null,
            "name": "Rólunk",
            "slug": "rolunk",
            "type": "page_link"
          },
          {
            "link": null,
            "name": "Régi oldal",
            "slug": "regi-oldal",
            "type": "page_link"
          }
        ],
        "link": "/informaciok",
        "name": "Iskolánk",
        "slug": null,
        "type": "internal_link"
      },
      {
        "children": [],
        "link": null,
        "name": "Kapcsolat",
        "slug": "kapcsolat",
        "type": "page_link"
      },
      {
        "children": [],
        "link": "https://example.test/e-naplo",
        "name": "E-napló",
        "slug": null,
        "type": "external_link"
      }
    ]
  },
  "extensions": {
    "analyzer": {
      "complexity": 10,
      "depth": 3
    }
  }
}
