tests/snapshots/frontend_queries__page.snap
---
source: tests/frontend_queries.rs
expression: response
---
{
  "data": {
    "page": {
      "id": 1,
      "template": "default",
      "name": "rolunk",
      "title": "Rólunk",
      "content": "<p>Iskolánk bemutatkozása.</p>",
      "extras": {
        "meta_description": "Az iskola bemutatása"
      }
    }
  },
  "extensions": {
    "analyzer": {
      "complexity": 7,
      "depth": 2
    }
  }
}
