tests/snapshots/frontend_queries__post_page.snap
---
source: tests/frontend_queries.rs
expression: response
---
{
  "data": {
    "post": {
      "author": {
        "description": "Magyar és történelem szakos tanár.",
        "id": 1,
        "image": "https://storage.test/authors_images/kovacs-anna.jpg",
        "name": "Kovács Anna"
      },
      "color": "#1e88e5",
      "content": "<p>Az ünnepségen a diákok műsorral készültek.</p>",
      "date": "2026-09-01",
      "description": "Ünnepélyesen megnyitottuk a 2026/2027-es tanévet.",
      "id": 1,
      "images": [
        "https://storage.test/posts_images/tanevnyito-1.jpg",
        "https://storage.test/posts_images/tanevnyito-2.jpg"
      ],
      "indexImage": "https://storage.test/posts_images/tanevnyito.jpg",
      "labels": [
        {
          "color": "#8e24aa",
          "id": 2,
          "name": "Ünnepségek"
        },
        {
          "color": "#1e88e5",
          "id": 1,
          "name": "Hírek"
        }
      ],
      "title": "Tanévnyitó ünnepség"
    }
  },
  "extensions": {
    "analyzer": {
      "complexity": 18,
      "depth": 3
    }
  }
}
